--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.56.4",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
