--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.511.0",
+    "owl.carousel": "^2.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
+    "react-owl-carousel": "^2.3.3",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
